Fixing the h4 style Fixing the floating titles in samples guide Fixing text overflows in pre tags
git-svn-id: https://svn.apache.org/repos/asf/synapse/branches/2.0@1040769 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/site/resources/css/site.css
+++ b/src/site/resources/css/site.css
@@ -35,6 +35,8 @@ h3{
     font-weight:bold;
 }
 h4{
+    padding:0px;
+    margin:0px;
     font-weight:bold;
     color:#777777;
 }
@@ -57,6 +59,7 @@ pre{
     font-family: Courier;
     margin: 10px;
     line-height: 13px;
+    overflow: auto;
 }
 /* page styles */
 .page-padding{
